Validations and Exceptions from accounts